--- a/style.css
+++ b/style.css
@@ -1,24 +1,16 @@
 body {
-  background-color: #0d1117;
+  background-color: #16191f;
   font-family: Arial, Helvetica;
   color: white;
+  padding: 3%;
 }
-blink {
-  animation: blinker 0.6s linear infinite;
-  color: #1c87c9;
+
+.main {
+  background-color: #0d1117;
+  text-align: center;
 }
-@keyframes blinker {  
-  50% { opacity: 0; }
-}
-.blink-one {
-  animation: blinker-one 1s linear infinite;
-}
-@keyframes blinker-one {  
-  0% { opacity: 0; }
-}
-.blink-two {
-  animation: blinker-two 1.4s linear infinite;
-}
-@keyframes blinker-two {  
-  100% { opacity: 0; }
+
+img {
+  width: 250px;
+  margin: 2%;
 }
