--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ body {
   text-align: center;
 }
 
-img {
+.main img {
   width: 30%;
   margin: 2%;
   transition: 0.5s;
 }
 
-img:hover {
+.main img:hover {
   width: 45%;
 }
