--- a/style.css
+++ b/style.css
@@ -1,21 +1,42 @@
+html {
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: #16191f;
   font-family: Arial, Helvetica;
   color: white;
-  padding: 3%;
 }
 
-.main {
+main {
+  flex: 1;
+}
+
+footer {
+  margin-top: auto;
+  background-color: #000;
+  padding: 2rem;
+  text-align: center;
+}
+
+a {
+  color: white;
+}
+
+.gallery {
   background-color: #0d1117;
   text-align: center;
 }
 
-.main img {
+.gallery img {
   height: 30%;
   margin: 2%;
   transition: 0.5s;
 }
 
-.main img:hover {
+.gallery img:hover {
   height: 45%;
 }
