--- a/style.css
+++ b/style.css
@@ -11,32 +11,106 @@ body {
   color: white;
 }
 
+header {
+  margin-top: 30px;
+  padding-left: 10%;
+}
 main {
   flex: 1;
 }
 
+/** Footer **/
 footer {
   margin-top: auto;
   background-color: #000;
   padding: 2rem;
   text-align: center;
 }
-
-a {
+footer a {
   color: white;
 }
 
+/** Widget **/
+.widgets-div {
+  text-align: center;
+  display: flex;
+  flex-wrap: nowrap;
+}
+.widget {
+  background-color: rgb(37, 42, 48);
+  border-radius: 8%;
+  width: 20%;
+  padding: 20px;
+  text-align: center;
+  margin: 5%;
+  color: white;
+  text-decoration: none;
+  box-shadow: #0d1117 0px 10px;
+}
+.widget img {
+  max-width: 100%;
+  height: auto;
+}
+.widget p {
+  margin: 10px 0;
+  margin-bottom: 0px;
+}
+
+/** Gallery **/
 .gallery {
   background-color: #0d1117;
   text-align: center;
 }
-
 .gallery img {
   height: 30%;
   margin: 2%;
   transition: 0.5s;
 }
-
 .gallery img:hover {
   height: 45%;
+}
+
+
+/* === removing default button style ===*/
+.button {
+  margin: 0;
+  height: auto;
+  background: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
+
+/* button styling */
+.button {
+  --border-right: 6px;
+  --text-stroke-color: rgba(255,255,255,0.6);
+  --animation-color: #37FF8B;
+  --fs-size: 2em;
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: var(--fs-size);
+  font-family: "Arial";
+  position: relative;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px var(--text-stroke-color);
+}
+/* this is the text, when you hover on button */
+.hover-text {
+  position: absolute;
+  box-sizing: border-box;
+  content: attr(data-text);
+  color: var(--animation-color);
+  width: 0%;
+  inset: 0;
+  border-right: var(--border-right) solid var(--animation-color);
+  overflow: hidden;
+  transition: 0.5s;
+  -webkit-text-stroke: 1px var(--animation-color);
+}
+/* hover */
+.button:hover .hover-text {
+  width: 100%;
+  filter: drop-shadow(0 0 23px var(--animation-color))
 }
