--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -23,6 +24,7 @@ footer {
   padding: 2rem;
   text-align: center;
 }
+
 footer a {
   color: white;
 }
@@ -35,12 +37,14 @@ footer a {
   margin-bottom: 20px;
   text-align: center;
 }
+
 .gallery img {
   height: 300px;
   margin: 2%;
   transition: 0.5s;
 }
-.gallery img:hover {
+
+.gallery img:active {
   height: 450px;
 }
 
@@ -51,6 +55,7 @@ footer a {
   display: flex;
   flex-wrap: nowrap;
 }
+
 .widget {
   background-color: rgb(37, 42, 48);
   border-radius: 8%;
@@ -63,17 +68,21 @@ footer a {
   box-shadow: #0d1117 0px 10px;
   transition: 0.2s;
 }
+
 .widget:hover {
   box-shadow: #0d1117 0px 15px;
 }
+
 .widget:active {
   box-shadow: #0d1117 0px 5px;
   bottom: 10px;
 }
+
 .widget img {
   max-width: 100%;
   height: auto;
 }
+
 .widget p {
   margin: 10px 0;
   margin-bottom: 0px;
@@ -88,7 +97,7 @@ footer a {
   border: none;
   cursor: pointer;
   --border-right: 6px;
-  --text-stroke-color: rgba(255,255,255,0.6);
+  --text-stroke-color: rgba(255, 255, 255, 0.6);
   --animation-color: #37FF8B;
   --fs-size: 2em;
   letter-spacing: 3px;
@@ -100,6 +109,7 @@ footer a {
   color: transparent;
   -webkit-text-stroke: 1px var(--text-stroke-color);
 }
+
 .hover-text {
   position: absolute;
   box-sizing: border-box;
@@ -112,13 +122,18 @@ footer a {
   transition: 0.5s;
   -webkit-text-stroke: 1px var(--animation-color);
 }
+
 .button:hover .hover-text {
   width: 100%;
   filter: drop-shadow(0 0 23px var(--animation-color))
 }
 
 /** Home **/
-.home {text-align: right; top: 20px;}
+.home {
+  text-align: right;
+  top: 20px;
+}
+
 .animated-link {
   color: #213999;
   margin-right: 50px;
@@ -129,7 +144,9 @@ footer a {
   display: inline-block;
   transition: color 0.2s, transform 0.2s;
 }
-.animated-link:before, .animated-link:after {
+
+.animated-link:before,
+.animated-link:after {
   position: absolute;
   top: -5px;
   font-weight: 100;
@@ -138,20 +155,25 @@ footer a {
   opacity: 0;
   transition: opacity 0.2s, transform 0.2s;
 }
+
 .animated-link:before {
   left: -0.1em;
   content: '[';
   transform: translateX(-100%);
 }
+
 .animated-link:after {
   right: -0.1em;
   content: ']';
   transform: translateX(100%);
 }
+
 .animated-link:hover {
   color: #d04c3f;
 }
-.animated-link:hover:before, .animated-link:hover:after {
+
+.animated-link:hover:before,
+.animated-link:hover:after {
   opacity: 1;
   transform: translateX(0);
 }
