--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 
 header {
   margin-top: 30px;
-  padding-left: 10%;
 }
 
 /** Footer **/
@@ -91,6 +90,8 @@ footer a {
 /** Sky **/
 .button {
   margin: 0;
+  margin-left: 10%;
+  margin-bottom: 20px;
   height: auto;
   background: transparent;
   padding: 0;
@@ -128,52 +129,49 @@ footer a {
   filter: drop-shadow(0 0 23px var(--animation-color))
 }
 
-/** Home **/
-.home {
-  text-align: right;
-  top: 20px;
+/** Menu **/
+.topnav {
+  margin-left: 2%;
+  overflow: hidden;
 }
-
-.animated-link {
-  color: #213999;
-  margin-right: 50px;
-  font-weight: 500;
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  position: relative;
-  padding: 0 0.25em;
-  display: inline-block;
-  transition: color 0.2s, transform 0.2s;
+  font-size: 17px;
+  transition: 0.5s;
 }
-
-.animated-link:before,
-.animated-link:after {
-  position: absolute;
-  top: -5px;
-  font-weight: 100;
-  font-size: 150%;
-  line-height: 1;
-  opacity: 0;
-  transition: opacity 0.2s, transform 0.2s;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
-
-.animated-link:before {
-  left: -0.1em;
-  content: '[';
-  transform: translateX(-100%);
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
-
-.animated-link:after {
-  right: -0.1em;
-  content: ']';
-  transform: translateX(100%);
+.topnav .icon {
+  display: none;
 }
-
-.animated-link:hover {
-  color: #d04c3f;
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
-
-.animated-link:hover:before,
-.animated-link:hover:after {
-  opacity: 1;
-  transform: translateX(0);
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
