--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ footer a {
 }
 
 .gallery img {
-  height: 300px;
+  height: 100px;
   margin: 2%;
   transition: 0.5s;
 }
@@ -150,7 +150,7 @@ footer a {
   color: black;
 }
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #37FF8B;
   color: white;
 }
 .topnav .icon {
