--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ footer a {
 /** Gallery **/
 .gallery {
   background-color: #0d1117;
+  border-radius: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
