--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #16191f;
@@ -13,8 +12,15 @@ body {
 }
 
 header {
-  margin-top: 30px;
+  width: 100%;
+  min-height: 3em;
+  background-color: #16191f;
+  box-sizing: border-box;
+  padding: 1em;
+  transition: .5s;
 }
+
+/* main {padding: 6em 0;} */
 
 /** Footer **/
 footer {
@@ -28,7 +34,75 @@ footer a {
   color: white;
 }
 
-/** Gallery **/
+.visually-hidden {
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.btn-group {
+  display: block;
+  /* justify-content: center; */
+  text-align: center;
+  justify-content: space-evenly;
+}
+.btn {
+  border: 0.2rem solid #4d4d4d;
+  cursor: pointer;
+  padding: 0.8rem 1rem 0.7rem;
+  border-radius: 20px;
+  margin: 10px 10px;
+  text-transform: capitalize;
+}
+.btn.toggle-btn {
+  border-color: #4d4d4d;
+  border-width: 2px;
+  transition: 0.5s ease-in-out;
+}
+.btn.toggle-btn[aria-pressed="true"] {
+  border-color: #fff;
+  text-decoration: underline;
+  box-shadow: 0 0 30px white;
+}
+.btn__filter {
+  border-color: lightgrey;
+}
+button {
+  -moz-osx-font-smoothing: inherit;
+  -webkit-font-smoothing: inherit;
+  appearance: none;
+  background: transparent;
+  border: none;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  margin: 0;
+  overflow: visible;
+  padding: 0;
+  width: auto;
+}
+button::-moz-focus-inner {
+  border: 0;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+button,
+input {
+  overflow: visible;
+}
+
 .gallery {
   background-color: #0d1117;
   border-radius: 10px;
@@ -39,7 +113,7 @@ footer a {
 }
 
 .gallery img {
-  height: 300px;
+  height: 20lvw;
   margin: 2%;
   aspect-ratio: 3/2;
   object-fit: contain;
@@ -47,7 +121,7 @@ footer a {
   border-radius: 10px;
 }
 
-/** Widget **/
+/* 
 .widgets-div {
   text-align: center;
   display: flex;
@@ -85,7 +159,7 @@ footer a {
 .widget p {
   margin: 10px 0;
   margin-bottom: 0px;
-}
+} */
 
 /** Sky **/
 .button {
