--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@ body {
   background-color: #16191f;
   font-family: Arial, Helvetica;
   color: #ededed;
+  padding: 10px;
 }
 
 header {
@@ -65,7 +66,6 @@ footer a {
 }
 .btn.toggle-btn[aria-pressed="true"] {
   border-color: #fff;
-  text-decoration: underline;
   box-shadow: 0 0 30px #ededed;
 }
 .btn__filter {
@@ -118,7 +118,7 @@ input {
   align-content: center;
   .image {
     #loader {
-      margin: -55px auto auto auto;
+      margin: -60px auto auto auto;
       transform: translateY(140px) translateX(-5px);
     }
     img {
@@ -126,6 +126,36 @@ input {
       width: 100%;
       aspect-ratio: 1;
       object-fit: cover;
+    }
+  }
+}
+
+.detailed {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(5px);
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px #ededed solid;
+    border-radius: 30px;
+    width: 80%;
+    img {
+      border-radius: 0 0 30px 30px;
+      width: 100%;
+    }
+    header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 20px 40px;
+      border-radius: 30px 30px 0 0;
     }
   }
 }
@@ -152,73 +182,20 @@ input {
   text-transform: uppercase;
   color: transparent;
   -webkit-text-stroke: 1px var(--text-stroke-color);
+  .hover-text {
+    position: absolute;
+    box-sizing: border-box;
+    content: attr(data-text);
+    color: var(--animation-color);
+    width: 0%;
+    inset: 0;
+    border-right: var(--border-right) solid var(--animation-color);
+    overflow: hidden;
+    transition: 0.5s;
+    -webkit-text-stroke: 1px var(--animation-color);
+  }
 }
-
-.hover-text {
-  position: absolute;
-  box-sizing: border-box;
-  content: attr(data-text);
-  color: var(--animation-color);
-  width: 0%;
-  inset: 0;
-  border-right: var(--border-right) solid var(--animation-color);
-  overflow: hidden;
-  transition: 0.5s;
-  -webkit-text-stroke: 1px var(--animation-color);
-}
-
 .button:hover .hover-text {
   width: 100%;
   filter: drop-shadow(0 0 23px var(--animation-color));
-}
-
-/** Menu **/
-.topnav {
-  margin-left: 2%;
-  overflow: hidden;
-}
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  transition: 0.5s;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-.topnav a.active {
-  background-color: #37ff8b;
-  color: black;
-}
-.topnav .icon {
-  display: none;
-}
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 }
