--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,16 @@ header {
   box-sizing: border-box;
   padding: 1em;
   transition: 0.5s;
+  .top-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 50px;
+    align-items: baseline;
+    #about {
+      color: #37ff8b;
+    }
+  }
 }
 
 /* main {padding: 6em 0;} */
